; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/hastd/extr_hooks.c_hook_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/hastd/extr_hooks.c_hook_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hookproc = type { i64, i64 }

@HOOKPROC_MAGIC_ALLOCATED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hookproc*)* @hook_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hook_free(%struct.hookproc* %0) #0 {
  %2 = alloca %struct.hookproc*, align 8
  store %struct.hookproc* %0, %struct.hookproc** %2, align 8
  %3 = load %struct.hookproc*, %struct.hookproc** %2, align 8
  %4 = getelementptr inbounds %struct.hookproc, %struct.hookproc* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @HOOKPROC_MAGIC_ALLOCATED, align 8
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @PJDLOG_ASSERT(i32 %8)
  %10 = load %struct.hookproc*, %struct.hookproc** %2, align 8
  %11 = getelementptr inbounds %struct.hookproc, %struct.hookproc* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp sgt i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @PJDLOG_ASSERT(i32 %14)
  %16 = load %struct.hookproc*, %struct.hookproc** %2, align 8
  %17 = getelementptr inbounds %struct.hookproc, %struct.hookproc* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  %18 = load %struct.hookproc*, %struct.hookproc** %2, align 8
  %19 = call i32 @free(%struct.hookproc* %18)
  ret void
}

declare dso_local i32 @PJDLOG_ASSERT(i32) #1

declare dso_local i32 @free(%struct.hookproc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
